Fix electron, move close icon to be visible

--- a/packages/web/src/components/banner/Banner.module.css
+++ b/packages/web/src/components/banner/Banner.module.css
@@ -13,6 +13,10 @@
   padding-left: 240px;
 }
 
+.banner.isElectron .iconRemove {
+  left: calc(240px + var(--unit-4));
+}
+
 .banner.isMobile {
   /* height: 72px; */
 }
